Fix input styling that overwrote error modifier. Fix input validation for finding if it was a number. Fix bad axios call by coverting the string to integers for required number fields. Fix spacing of back arrow in heading for tablet and desktop.

--- a/src/Components/InventoryItemForm/InventoryItemForm.scss
+++ b/src/Components/InventoryItemForm/InventoryItemForm.scss
@@ -90,6 +90,7 @@
     }
 
     &__input{
+
         &--error{
             @include inputErrorStyle();
         }
@@ -143,6 +144,15 @@
         flex-basis: 50%;
         justify-content: flex-start;
         align-items: center;
+
+    }
+
+    &__radioBtn{
+        margin: 0;
+        margin-right: 0.5rem;
+        height: 1rem;
+        width: 1rem;
+
         border: 0.0625rem solid $secondary-cloud;
         color: $primary-indigo;
         outline: none;
@@ -150,12 +160,6 @@
         &:active, &:focus, &:focus-within, &:checked{
             border-color: $primary-indigo;
         }
-    }
-
-    &__radioBtn{
-        margin: 0;
-        height: 1rem;
-        width: 1rem;
     }
 
     &__textarea{
