--- a/src/pages/InventoryAddPage/InventoryAddPage.scss
+++ b/src/pages/InventoryAddPage/InventoryAddPage.scss
@@ -29,6 +29,10 @@
         @include backArrowStyle();
         margin-left: 1.5rem;
         margin-top: 0.5rem;
+
+        @include tablet(){
+            margin-top: 0;
+        }
     }
 
     &__heading{
